@@ -7,6 +7,9 @@ default: $(WIDGETS)
 
 $(WIDGETS): %.py: %.ui
 	pyuic $< > $@
+	echo "from qtextedit2 import *" > tmp
+	sed 's/QTextEdit(/QTextEdit2(/' $@ >> tmp
+	mv tmp $@
 
 clean:
 	rm -f *~ *.pyc
